...
    <string name="meta_rayban_last_error">Last DAT error</string>
    <string name="meta_rayban_send_diagnostics">Send Meta diagnostics</string>
    <string name="meta_rayban_registration_status">Registration: %1$s</string>
    <string name="meta_rayban_session_status">Session: %1$s</string>
    <string name="meta_rayban_stream_status">Stream: %1$s</string>
    <string name="meta_rayban_display_status">Display: %1$s</string>
    <string name="meta_rayban_register">Register</string>
    <string name="meta_rayban_unregister">Unregister</string>
    <string name="meta_rayban_start_session">Start session</string>
    <string name="meta_rayban_stop_session">Stop session</string>
    <string name="meta_rayban_start_stream">Start stream</string>
    <string name="meta_rayban_stop_stream">Stop stream</string>
    <string name="meta_rayban_capture_photo">Capture photo</string>
    <string name="meta_rayban_view_last_photo">View last photo</string>
...
